--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 <div class="row">
-    <div class="col-md-12 col-lg-12 col-sm-12"  style="margin-bottom:20px;">
+<!--     <div class="col-md-12 col-lg-12 col-sm-12"  style="margin-bottom:20px;">
         <div class="row">
             <div class="col-md-8">
         <div class="card">
@@ -29,8 +29,12 @@
             </div>
 
 
-        </div>
-        </div>
+        </div> -->
+    <ul>
+        <li>DevOps CI/CD pipeline with various feature like ETL Pipeline with data validation step, pre-processing pipeline, run-time configuration update, auto deployment of best model and maintaining complete log of each pipeline step.</li>
+        <li>Flask web app developed in dockerized container with layered project structure and modular coding approach.</li>
+    </ul>
+</div>
 <div class="col-md-4 col-lg-4 col-sm-12">
 <div class="card">
     <div class="card-header">
